@@ -1,6 +1,12 @@
 2017-02-20  Matthew Fortune  <matthew.fortune@imgtec.com>
 
 	PR target/78660
+	* lra-constraints.c (curr_insn_transform): Tighten condition
+	for converting SUBREG reloads from OP_OUT to OP_INOUT.
+
+2017-02-20  Matthew Fortune  <matthew.fortune@imgtec.com>
+
+	PR target/78660
 	* lra-constraints.c (curr_insn_transform): Handle
 	WORD_REGISTER_OPERATIONS requirements when reloading SUBREGs.
 
